# dash-chat

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  aon.nix  flake.nix  garnix.yaml  happ.nix  index.html  justfile  mailbox.redb  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  servers.nix  tauri-app.nix
.claude/: settings.json
.claude/skills/review-app/: SKILL.md
.claude/skills/start-dev/: SKILL.md
.github/workflows/: build-aon.yaml  build-nix-app.yaml  claude-code-review.yml  claude.yml  release-tauri-app.yaml  site.yaml  test.yaml
aon/: raspberry-pi.nix
assets/: index-0a410883.js  index-2f79a3f5.js  index-4a5e3d1f.js  index-5e4f87e9.js  index-9b72a38f.js  index-c2ff9066.js  index-ddbcb45a.js
crates/dashchat-model/: Cargo.toml
crates/dashchat-model/src/: lib.rs  network_model.rs  node_model.rs  op_model.rs
crates/dashchat-node/: Cargo.toml
crates/dashchat-node/src/: chat.rs  contact.rs  error.rs  filesystem.rs  friend.rs  id.rs  lib.rs  local_store.rs  mailbox.rs  network.rs  node.rs  operation.rs  payload.rs  profile.rs  relay.rs  spaces.rs  tests.rs  topic.rs  util.rs
crates/dashchat-node/src/chat/: message.rs  tests.rs
crates/dashchat-node/src/local_store/: binary_wrapper.rs  impls.rs
crates/dashchat-node/src/mailbox/: NOTES.md  manager.rs  mem.rs  toy.rs
crates/dashchat-node/src/node/: api.rs  author_operation.rs  frontend.rs  receive_messages.rs  stream_processing.rs
crates/dashchat-node/src/polestar/: action.rs  mod.rs
crates/dashchat-node/src/relay/: mem.rs
crates/dashchat-node/src/spaces/: control_message.rs  forge.rs
crates/dashchat-node/src/stores/: author_store.rs  mod.rs  op_store.rs  spaces_store.rs
crates/dashchat-node/src/testing/: aliased.rs  behavior.rs  ext.rs  introduce.rs  manager.rs  mod.rs  test_node.rs
crates/dashchat-node/src/testing/ext/: aliased.rs  short_id.rs
crates/dashchat-node/tests/: contact_code.rs  contacts.rs  device_groups.rs  group_chats.rs  inbox.rs  mailboxes.rs  p2panda_repro.rs  profiles.rs
crates/mailbox-client/: Cargo.toml
crates/mailbox-client/src/: NOTES.md  lib.rs  manager.rs  mem.rs  store.rs  toy.rs
crates/mailbox-server/: Cargo.toml  README.md  default.nix
crates/mailbox-server/src/: blob.rs  blobs_table.rs  cleanup.rs  get_blobs.rs  lib.rs  store_blobs.rs  test_utils.rs  watermark.rs  watermarks_table.rs
crates/mailbox-server/tests/: cleanup.rs  integration.rs  integration_test.rs  stress.rs  stress_test.rs  watermark.rs
crates/mailbox_server/: Cargo.toml  README.md
crates/mailbox_server/src/: cleanup.rs  get_blobs.rs  get_messages.rs  lib.rs  main.rs  store_blobs.rs  store_message.rs
crates/mailbox_server/tests/: integration_test.rs  stress_test.rs
crates/relay_server/: Cargo.toml
crates/relay_server/src/: main.rs
dnas/dash-chat/: dna.nix
dnas/dash-chat/workdir/: dna.yaml
dnas/dash-chat/zomes/coordinator/locker_async_messages/: Cargo.toml  zome.nix
dnas/dash-chat/zomes/coordinator/locker_async_messages/src/: lib.rs
dnas/dash-chat/zomes/coordinator/safehold_async_messages/: Cargo.toml  zome.nix
dnas/dash-chat/zomes/coordinator/safehold_async_messages/src/: lib.rs
dnas/messenger_demo/: dna.nix
dnas/messenger_demo/workdir/: dna.yaml
nix/: database.nix  raspberry-pi.nix  servers.nix  tauri-app.nix
site/: index.html  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: filesystem.rs  lib.rs  local_store.rs  mailbox.rs  menu.rs  modify_notification.rs  push_notifications.rs  tray.rs  utils.rs
src-tauri/src/commands/: chats.rs  contacts.rs  devices.rs  direct_chats.rs  direct_messages.rs  friends.rs  group_chat.rs  logs.rs  mod.rs  profile.rs  request.rs
src-tauri/src/push_notifications/: android_logs.rs
src-tauri/tests/: migration.rs
tests/: package.json  vitest.config.ts
tests/src/: app-path.ts  migration.test.ts  setup.ts
ui/: .gitignore  babel.config.js  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1733303120385-d20b111736dbb.mjs
ui/messages/: de-de.json  en.json  es.json  et.json  fa-ir.json  fr.json
ui/project.inlang/: project_id  settings.json
ui/src/: app-styles.ts  app.css  app.html  automatic-update-dialog.ts  context.ts  holochain-app.ts  home-page.ts  hooks.server.ts  link-device-dialog.ts  overlay-page.ts  select-friend.ts  show-agent-info-qrcode.ts  splash-screen.ts  utils.ts
ui/src/components/: AllChats.svelte  Avatar.svelte  SelectAvatar.svelte
ui/src/contacts/: AddContact.svelte
ui/src/friends/: AddFriend.svelte
ui/src/group-chats/: group-chat-client.ts
ui/src/lib/components/: AllChats.svelte  MessageInput.svelte  MessageStatus.svelte  (+2 more)
ui/src/p2panda/: logs-client.ts  logs-store.ts  simplified-types.ts  tauri-logs-client.ts  types.ts
ui/src/peer-chat/: peer-chat-client.ts
ui/src/profiles/: CreateProfile.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/signals/: adaptor.ts  async-computed.ts  memo-map.ts  relay.ts  svelte-adaptor.ts
ui/src/splashscreen/: Splashscreen.svelte  SplashscreenPrompt.svelte
ui/src/stores/: direct-chat-store.ts  friends-store.ts  group-chat-store.ts  types.ts  use-signal.ts  users-client.ts  users-store.ts
ui/src/users/: user-client.ts
ui/src/utils/: compress.ts  icon.ts  image.ts  insets.ts  localization.ts  qrcode.ts
ui/tests/: selectors.ts
ui/tests/flows/: contact-exchange.ts  profile-creation.ts  send-message.ts  setup.ts
ui/tests/pages/: add-contact.ts  chat-settings.ts  contacts.ts  create-profile.ts  direct-chat.ts  edit-about.ts  edit-name.ts  home.ts  new-group.ts  new-message.ts  settings.ts
uiold/: package.json  tsconfig.json
uiold/src/: context.ts  holochain-app.ts  home-page.ts  overlay-page.ts  show-agent-info-qrcode.ts  splash-screen.ts  types.ts  utils.ts
uiold/src/friends/: friends-client.ts
uiold/src/group-chats/: group-chat-client.ts
uiold/src/users/: user-client.ts
workdir/: happ.yaml  web-happ.yaml
(+44 files in other folders)
