[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
lto = "fat"
codegen-units = 1
# inherits = "release"

[workspace]
members = ["src-tauri", "dnas/*/zomes/coordinator/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.7.0-dev"
hdk = "0.6.0-dev"
holochain_serialized_bytes = "*"
serde = "1"

[patch.crates-io]
wasmer-vm = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-x86" }
wasmer-types = { git = "https://github.com/guillemcordoba/wasmer", branch = "fix-x86" }
kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport-v0.2" }
