[profile.release]
opt-level = 3
panic = "abort"
lto = "fat"
codegen-units = 1
# inherits = "release"

[workspace]
members = ["crates/dashchat-node", "src-tauri"]
resolver = "2"

[workspace.dependencies]

[patch."https://github.com/maackle/p2panda.git"]
# p2panda-auth = { path = "/home/michael/gitfork/p2panda/p2panda-auth" }
# p2panda-core = { path = "/home/michael/gitfork/p2panda/p2panda-core" }
# p2panda-encryption = { path = "/home/michael/gitfork/p2panda/p2panda-encryption" }
# p2panda-discovery = { path = "/home/michael/gitfork/p2panda/p2panda-discovery" }
# p2panda-net = { path = "/home/michael/gitfork/p2panda/p2panda-net" }
# p2panda-store = { path = "/home/michael/gitfork/p2panda/p2panda-store" }
# p2panda-stream = { path = "/home/michael/gitfork/p2panda/p2panda-stream" }
# p2panda-sync = { path = "/home/michael/gitfork/p2panda/p2panda-sync" }
# p2panda-spaces = { path = "/home/michael/gitfork/p2panda/p2panda-spaces" }
