[package]
name = "dashchat-model"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0.100"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }

polestar = { path = "/home/michael/proj/polestar-rs/polestar" }
exhaustive = "0.2.2"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
