[package]
name = "dashchat-node"
version = "0.1.0"
description = "dashchat's p2p backend"
authors = ["you"]
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

mailbox-server = { path = "../mailbox-server" }

anyhow = "1.0.95"
async-trait = "0.1.85"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3"
mailbox-client = { path = "../mailbox-client" }
redb = "3.1"

# p2panda-core = "0.3.1"
# p2panda-discovery = { version = "0.3.1", features = ["mdns"] }
# p2panda-net = "0.3.1"
# p2panda-store = "0.3.1"
# p2panda-stream = "0.3.1"
# p2panda-sync = { version = "0.3.1", features = ["log-sync"] }
p2panda-auth = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
p2panda-core = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
p2panda-encryption = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
p2panda-discovery = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat", features = [
  "mdns",
] }
p2panda-net = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
p2panda-store = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat", features = [
  "sqlite",
] }
p2panda-stream = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat" }
p2panda-sync = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat", features = [
  "log-sync",
] }
p2panda-spaces = { git = "https://github.com/maackle/p2panda.git", branch = "dashchat", features = [
  "test_utils",
] }
tokio = { version = "1.43.0", features = ["fs"] }

named-id = { git = "https://github.com/maackle/named-id.git" }
base64 = "0.22"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.2"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bytes = "1.11.0"
sqlx = "0.8.6"


tempfile = { version = "3.24", optional = true }


[dev-dependencies]
dashchat-node = { path = ".", features = ["testing"] }
mailbox-server = { path = "../mailbox-server", features = ["test_utils"] }
itertools = "0.14.0"
maplit = "1.0"
pretty_assertions = "1.4.1"

[features]
default = ["testing", "instrument"]
instrument = []
testing = ["tempfile"]
p2p = []

# patches go in the workspace Cargo.toml
#
# [patch."https://github.com/maackle/p2panda.git"]
# p2panda-auth = { path = "/home/michael/gitfork/p2panda/p2panda-auth" }
# p2panda-core = { path = "/home/michael/gitfork/p2panda/p2panda-core" }
# p2panda-encryption = { path = "/home/michael/gitfork/p2panda/p2panda-encryption" }
# p2panda-discovery = { path = "/home/michael/gitfork/p2panda/p2panda-discovery" }
# p2panda-net = { path = "/home/michael/gitfork/p2panda/p2panda-net" }
# p2panda-store = { path = "/home/michael/gitfork/p2panda/p2panda-store" }
# p2panda-stream = { path = "/home/michael/gitfork/p2panda/p2panda-stream" }
# p2panda-sync = { path = "/home/michael/gitfork/p2panda/p2panda-sync" }
# p2panda-spaces = { path = "/home/michael/gitfork/p2panda/p2panda-spaces" }
